# rbe26

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  docker-compose.yml  info.json  nginx.conf
docs/br/: AVALIACAO.md  REGRAS_DE_DETECCAO.md
src/: buckets.rs  handlers.rs  lb.rs  lib.rs  main.rs  models.rs  resources.rs  vectorizer.rs
src/preprocessor/: main.rs
test/: results.json
