[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "preprocessor"
path = "src/preprocessor/main.rs"

[package]
name = "rbe26"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
flate2 = "1.1.9"
qdrant-client = "1.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
