[package]
name = "rbe26"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "preprocessor"
path = "src/preprocessor/main.rs"

[[bin]]
name = "lb"
path = "src/lb.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[dependencies]
axum = "0.8.9"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
